リスト表示処理追加

--- a/src/app/menu/menu.component.html
+++ b/src/app/menu/menu.component.html
@@ -1,1 +1,6 @@
-<p>menu works!</p>
+<div class="menu">
+    <ul>
+         <li><a routerLink="/">Dashboard</a></li>
+         <li><a routerLink="/users">Users</a></li>
+    </ul>
+</div>
