--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,5 @@
-<h1>Hello world!</h1>
+<app-header></app-header>
+<app-menu></app-menu>
+<div class="main">
+    <router-outlet></router-outlet>
+</div>
