編集処理追加

--- a/src/app/user/user-list/user-list.component.html
+++ b/src/app/user/user-list/user-list.component.html
@@ -3,7 +3,7 @@
     <tr><th>Id</th><th>Name</th><th>Email</th></tr>
     <tr *ngFor="let user of users">
       <td>{{user.id}}</td>
-      <td>{{user.name}}</td>
+      <td><a routerLink="/users/{{user.id}}/edit">{{user.name}}</a></td>
       <td>{{user.email}}</td>
     </tr>
 </table>
