--- a/src/styles.css
+++ b/src/styles.css
@@ -26,3 +26,14 @@ table th {
   background-color: #ddd;
   text-align: left;
 }
+
+button {
+  margin-top: 4px;
+  margin-right: 4px;
+  padding: 4px;
+  min-width: 120px;
+}
+input[type="text"] {
+  padding: 4px;
+  width: 300px;
+}
